--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
     align-items: center;
     background-image: url(./Images/brian-patrick.jpg);
     background-size: cover;
-
+    background-color: rgb(220, 220, 220);
     padding: 20px;
     margin-top: 300px;
 }
