--- a/styles.css
+++ b/styles.css
@@ -12,9 +12,10 @@ body {
 /* -- Business Card styles -- */
 
 .card-box {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
     gap: 35px;
     padding: 40px;
     width: 550px;
