--- a/styles.css
+++ b/styles.css
@@ -12,10 +12,9 @@ body {
 /* -- Business Card styles -- */
 
 .card-box {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     gap: 35px;
     padding: 40px;
     width: 550px;
