--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,7 @@ a:visited {
     color: #99caff;
 }
 
-.vcard-btn {
+.vcard-btn button{
     display: block;
     margin-top: 15px;
     background-color: ;
