--- a/styles.css
+++ b/styles.css
@@ -88,7 +88,7 @@ a:visited {
     border-radius: 10%;
 }
 
-.vcard:hover button{
+.vcard button:hover {
     background-color: #99caff;
     text-decoration: none;
 }
