--- a/styles.css
+++ b/styles.css
@@ -84,11 +84,11 @@ a:visited {
 .vcard-btn {
     display: block;
     margin-top: 15px;
-    background-color: ;
     border-radius: 10%;
+    color: rgb(220, 220, 220);
 }
 
 .vcard-btn:hover button {
-    background-color: #99caff;
+    background-color: rgb(242, 255, 0);
     text-decoration: none;
 }
