--- a/styles.css
+++ b/styles.css
@@ -85,7 +85,7 @@ a:visited {
     display: block;
     margin-top: 15px;
     border-radius: 10%;
-    color: rgb(12, 12, 12);
+    background-color: rgb(12, 12, 12);
 }
 
 .vcard-btn:hover button {
